--- a/src/components/DomainCircleView.css
+++ b/src/components/DomainCircleView.css
@@ -2,8 +2,10 @@
   position: relative;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 
 .domain-circle-svg {
   z-index: 4;
+  pointer-events: none;
 }
